@@ -225,6 +225,10 @@ Graphical tests
     VisualTest.DrawLinearModelResidual
     VisualTest.DrawQQplot
     VisualTest.DrawCDFplot
+    VisualTest.DrawUpperTailDependenceFunction
+    VisualTest.DrawUpperExtremalDependenceFunction
+    VisualTest.DrawLowerTailDependenceFunction
+    VisualTest.DrawLowerExtremalDependenceFunction
 
     :template: class.rst_t
     experimental.GeneralizedExtremeValueValidation
